fix: preview is now px-for-px with cropper

--- a/component/PhotoCropper.styl
+++ b/component/PhotoCropper.styl
@@ -9,6 +9,7 @@
 
   .upload
     display none
+    padding-bottom 12px
     img
       max-width 100%
       margin-bottom 31px
@@ -25,7 +26,7 @@
 
   .crop
     display none
-    padding-bottom 40px
+    padding-bottom 48px
     .left
       display inline-block
       vertical-align top
@@ -46,7 +47,6 @@
     left 1px
     bottom 1px
     z-index 9999
-    font-size .85em
     font-weight 500
     text-align center
     cursor pointer
